<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hey_per"
        android:textColor="@color/colorAccent"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />

    <EditText
        android:id="@+id/txtEmailRegID"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_email"
        android:drawableTint="@color/colorAccent"
        android:drawablePadding="8dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236" />

    <EditText
        android:id="@+id/txtPassRegID"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_lock"
        android:drawableTint="@color/colorAccent"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381" />

    <EditText
        android:id="@+id/txtPassReRegID"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_lock"
        android:drawableTint="@color/colorAccent"
        android:drawablePadding="8dp"
        android:hint="@string/re_password"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegID"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.616" />

    <Button
        android:id="@+id/btnBackLoginID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_reg_background"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.751" />

</androidx.constraintlayout.widget.ConstraintLayout>