<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewID"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imgPlaceID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/places_turist"
            android:src="@drawable/heyperu_logo"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">
            <TextView
                android:id="@+id/txtNamePlaceID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lugar_turistico"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hora: 9:00 am - 16:00 pm"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/startOneID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="131dp"
                    android:layout_marginEnd="256dp"
                    android:contentDescription="@string/hey_per"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:id="@+id/starTwoID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="160dp"
                    android:layout_marginEnd="227dp"
                    android:contentDescription="@string/hey_per"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:id="@+id/starTreeID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="189dp"
                    android:layout_marginEnd="198dp"
                    android:contentDescription="@string/hey_per"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:id="@+id/starFourID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="218dp"
                    android:layout_marginEnd="170dp"
                    android:contentDescription="@string/hey_per"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:id="@+id/starFiveID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="249dp"
                    android:layout_marginEnd="138dp"
                    android:contentDescription="@string/hey_per"
                    android:src="@drawable/ic_star" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
